
  [ Antonio Terceiro ]
  * debci-batch: put packages with fastest testsuites first in the queue
  * debci-generate-feeds: allow generating feeds for specific packages
  * debci-generate-index: update package feed right away when indexing
    individual packages
  * public/app.js: Adjust the "Pass percentage" Y axis labels so that chart is
    actually a percentage chart.

  [ Martin Pitt ]
  * Fix report_status() to work for bash scripts.
  * debci-test: Add --print-output option to write output directory to stdout.
    With that the caller can easily check the result.
  * debci, tools/server.sh: Exec the target program instead of running in a
    subprocess, for efficiency and proper SIGTERM handling.
  * Drop tools/convert-data. We only needed it for version 0.6, and we're
    going to need a different conversion script after the next data/ dir
    reorganization.
  * Reorganize data directory to move the "categories" packages/,
    autopkgtest/, status/, and feeds/ to the top level; they contain
    subdirs for all releases and architectures. This makes autopkgtest/ fully
    rsyncable and also makes it easier to the web UI to browse/present data
    for multiple releases and architectures. Also split release-arch/ into
    release/arch/.
  * Add tools/convert-data-0.7: Convert data directory to changed format from
    above.
  * Fix debci-status -l if there is just one package.
  * Add tests for debci-batch, covering skipping/re-running of tests under
    appropriate conditions and showing the cause for re-run in the log.
  * Replace test/json_validity (in ruby) with test/test_json.sh (shell with
    just calling ruby for the actual JSON validation). With that we can re-use
    test_helper's test bed setup instead of having to replicate it all in
    ruby.
  * Make test/runall.sh executable for convenience, and make it only run
    test_* scripts.
  * debci-batch: remove reading configuration from /etc/default/debci