@@ -203,7 +203,7 @@ jQuery(function($) {
     $target.html('');
     $.get(url, function(history) {
       var feed_url = 'data/feeds/' + pkg_dir + '.xml';
-      var feed = "&nbsp;<a class=\"btn btn-warning btn-xs\" href=\"" + feed_url + "\" title=\"Atom feed for " + pkg + "\"><span class='fa fa-rss'></span></a>";
+      var feed = "&nbsp;<a href=\"" + feed_url + "\" title=\"Atom feed for " + pkg + "\"><span class='fa fa-rss'></span></a>";
       $target.append("<h1>" + pkg + feed + "</h1>");
 
       if (history[0]) {
