@@ -43,7 +43,7 @@
 
         <div id='status'>
 
-          <h1>Status</h1>
+          <h1>Status <a href="data/feeds/all-packages.xml" title='Atom feed for events in all packages'><span class='fa fa-rss'></span></a></h1>
 
           <div class='row'>
             <div class='col-sm-6'>
