@@ -72,3 +72,11 @@
 #doc-main h2 {
   color: rgb(153,153,153);
 }
+
+/* -----------------------------------------------------------------
+ * Feed links
+ * ----------------------------------------------------------------- */
+
+a .fa-rss {
+  color: #f57900;
+}
